[gd_scene load_steps=15 format=3 uid="uid://ba2wt0cwplpt0"]

[ext_resource type="Script" path="res://scripts/firefly.gd" id="1_0mb7h"]
[ext_resource type="Texture2D" uid="uid://cu4odgjw2a34l" path="res://assets/head_sheet.png" id="2_k51sn"]
[ext_resource type="Texture2D" uid="uid://cvji0vi8ek2lk" path="res://assets/bodyb.png" id="2_uc8gp"]
[ext_resource type="Texture2D" uid="uid://dcpxyx5uyhgqi" path="res://assets/tail.png" id="3_keolc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qdymj"]
atlas = ExtResource("2_k51sn")
region = Rect2(0, 213, 241, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_pec36"]
atlas = ExtResource("2_k51sn")
region = Rect2(0, 0, 241, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_m782c"]
atlas = ExtResource("2_k51sn")
region = Rect2(482, 0, 241, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqokt"]
atlas = ExtResource("2_k51sn")
region = Rect2(241, 0, 241, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbn56"]
atlas = ExtResource("2_k51sn")
region = Rect2(723, 0, 241, 213)

[sub_resource type="SpriteFrames" id="SpriteFrames_aikpu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdymj")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pec36")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m782c")
}],
"loop": true,
"name": &"oops",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqokt")
}],
"loop": true,
"name": &"sing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbn56")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sn77k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_keolc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_wh7if"]
offsets = PackedFloat32Array(0.261905, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5et4v"]
gradient = SubResource("Gradient_wh7if")
fill = 1
fill_from = Vector2(0.508621, 0.487069)
fill_to = Vector2(0.0775862, 0.922414)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mxgtp"]
radius = 53.0
height = 222.0

[node name="Firefly" type="Node2D"]
script = ExtResource("1_0mb7h")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(1.52588e-05, -4.99998)
scale = Vector2(0.452929, 0.452929)
texture = ExtResource("2_uc8gp")

[node name="Head" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.512985, -84.25)
scale = Vector2(0.481221, 0.481221)
sprite_frames = SubResource("SpriteFrames_aikpu")
animation = &"sleep"

[node name="Tail" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 66)
scale = Vector2(0.456161, 0.456161)
sprite_frames = SubResource("SpriteFrames_sn77k")

[node name="TailLight" type="PointLight2D" parent="."]
position = Vector2(2, 104)
scale = Vector2(0.456161, 0.456161)
color = Color(0.49, 0.114333, 0, 1)
energy = 4.0
blend_mode = 2
texture = SubResource("GradientTexture2D_5et4v")
offset = Vector2(-0.135, -90)
texture_scale = 4.16

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-135, -162)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(135, 161)
shape = SubResource("CapsuleShape2D_mxgtp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
